--- a/Scott/Scott.vcxproj
+++ b/Scott/Scott.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Ramona.cpp" />
     <ClCompile Include="Roxilla.cpp" />
     <ClCompile Include="Scott.cpp" />
+    <ClCompile Include="Screen.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="Sprite.cpp" />
@@ -158,6 +159,7 @@
     <ClInclude Include="Ramona.h" />
     <ClInclude Include="Roxilla.h" />
     <ClInclude Include="Scott.h" />
+    <ClInclude Include="Screen.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="Sprite.h" />
