--- a/Scott/Scott.vcxproj
+++ b/Scott/Scott.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Kim.cpp" />
     <ClCompile Include="Level.cpp" />
+    <ClCompile Include="Load.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Malcolm.cpp" />
     <ClCompile Include="Physics.cpp" />
@@ -153,6 +154,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="Kim.h" />
     <ClInclude Include="Level.h" />
+    <ClInclude Include="Load.h" />
     <ClInclude Include="Malcolm.h" />
     <ClInclude Include="Physics.h" />
     <ClInclude Include="Player.h" />
