--- a/Scott/Scott.vcxproj
+++ b/Scott/Scott.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="Todd.cpp" />
     <ClCompile Include="Turret.cpp" />
     <ClCompile Include="UI.cpp" />
   </ItemGroup>
@@ -170,6 +171,7 @@
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="Todd.h" />
     <ClInclude Include="Turret.h" />
     <ClInclude Include="UI.h" />
   </ItemGroup>
